# cpp_exercises

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: lib.cpp  lib.hpp  main.cpp  main.cpz~
test/: CMakeLists.txt
test/source/: gallow_test.cpp
